# calculadora_clt

./: README.md  main.py  pyproject.toml
